[gd_scene load_steps=6 format=3 uid="uid://dwdabe2nweamh"]

[ext_resource type="Script" path="res://actors/projectile/bomb_projectile.gd" id="1_rboqq"]
[ext_resource type="Texture2D" uid="uid://dqria3oxaf2m5" path="res://Assets/bomb.png" id="2_d8h37"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rab43"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6ci04"]
radius = 13.0

[sub_resource type="Gradient" id="Gradient_eyoic"]

[node name="BombProjectile" type="Area2D"]
script = ExtResource("1_rboqq")

[node name="MainSprite" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_d8h37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_rab43")

[node name="TimeToLive" type="Timer" parent="."]
autostart = true

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_6ci04")

[node name="TrailParticles" type="CPUParticles2D" parent="."]
amount = 50
lifetime = 0.5
direction = Vector2(0, 0)
spread = 85.0
gravity = Vector2(0, 0)
scale_amount_min = 2.0
scale_amount_max = 2.0
color = Color(0.501961, 0.0823529, 0.168627, 1)
color_ramp = SubResource("Gradient_eyoic")
